--- a/Example/QNRTCKitDemo/Base.lproj/LaunchScreen.storyboard
+++ b/Example/QNRTCKitDemo/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,20 +18,7 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchImage.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="0nr-xc-Ajd">
-                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        <constraints>
-                            <constraint firstItem="0nr-xc-Ajd" firstAttribute="top" secondItem="c2T-iO-yHm" secondAttribute="bottom" id="J4k-LA-ifH"/>
-                            <constraint firstItem="z5z-4s-lgf" firstAttribute="top" secondItem="0nr-xc-Ajd" secondAttribute="bottom" id="V5k-yK-iLr"/>
-                            <constraint firstItem="0nr-xc-Ajd" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="YiP-c1-1bP"/>
-                            <constraint firstItem="z5z-4s-lgf" firstAttribute="top" secondItem="0nr-xc-Ajd" secondAttribute="bottom" id="qUG-J6-lEv"/>
-                            <constraint firstAttribute="trailing" secondItem="0nr-xc-Ajd" secondAttribute="trailing" id="qox-tX-8Wc"/>
-                            <constraint firstItem="0nr-xc-Ajd" firstAttribute="top" secondItem="c2T-iO-yHm" secondAttribute="bottom" id="vJd-fB-J1Y"/>
-                        </constraints>
+                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -41,7 +26,4 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="launchImage.jpg" width="375" height="667"/>
-    </resources>
 </document>
